// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NativeOptionListFc should render and match snapshot 1`] = `
<div id="jest-test">
  <option class="kol-select__option" value="-0">
    Option 1
  </option>
</div>
`;

exports[`NativeOptionListFc should render with a single option 1`] = `
<div id="jest-test">
  <option class="kol-select__option" value="-0">
    Option 1
  </option>
</div>
`;

exports[`NativeOptionListFc should render with multiple options 1`] = `
<div id="jest-test">
  <option class="kol-select__option" value="-0">
    Option 1
  </option>
  <option class="kol-select__option" value="-1">
    Option 2
  </option>
</div>
`;

exports[`NativeOptionListFc should render with multiple options with selected value 1`] = `
<div id="jest-test">
  <option class="kol-select__option" value="-0">
    Option 1
  </option>
  <option class="kol-select__option kol-select__option--selected" selected="" value="-1">
    Option 2
  </option>
</div>
`;

exports[`NativeOptionListFc should render with nested option groups 1`] = `
<div id="jest-test">
  <optgroup class="undefined__optgroup" label="Group 1">
    <option class="kol-select__option" value="-0-0">
      Option 1
    </option>
    <option class="kol-select__option" value="-0-1">
      Option 2
    </option>
  </optgroup>
</div>
`;

exports[`NativeOptionListFc should render with nested option groups with selected value 1`] = `
<div id="jest-test">
  <optgroup class="undefined__optgroup" label="Group 1">
    <option class="kol-select__option" value="-0-0">
      Option 1
    </option>
    <option class="kol-select__option kol-select__option--selected" selected="" value="-0-1">
      Option 2
    </option>
  </optgroup>
</div>
`;
